<resources>
    <string name="app_name">Proyecto Final</string>


    <string name="lbl_welcome">Bienvenido</string>
    <string name="lbl_description">Consulta de forma facil y sencilla</string>
    <string name="lbl_correo">Correo</string>
    <string name="lbl_passwrod">Contraseña</string>

    <string name="but_login">Iniciar Sesión</string>
    <string name="but_registrarse">Registrarse</string>

    <string name="lbl_login_description">Llena tus formularios con un clic</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //PokeApi

    <string name="pokeApi_welcome">Bienvenidos</string>
    <string name="pokeApi_second">Toda la información de Pokemon en un \n solo lugar</string>
    <string name="pokeApi_btn_start">Iniciar</string>
    <string name="pokeApi_frg_one_title">Buscador Pokemon por ID</string>
    <string name="pokeApi_frg_one_second">ID Pokemon</string>
    <string name="pokeApi_frg_one_placeholder">Escribir ID pokemon</string>
    <string name="pokeApi_frg_one_btn_search">Buscar</string>

</resources>